# Box-launcher-

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/boxlauncher/android/: EngineSelector.java  HookEngine.java  MainActivity.java  WorkloadProfile.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
core/: CMakeLists.txt  README.md
core/src/: HookEngine.cpp  HookEngine.hpp  main.cpp
core/src/main/cpp/: boxlauncher.cpp
core/tests/: boxlauncher_test.cpp
docs/: launcher-architecture.md
docs/legacy/java-swing/src/main/java/com/boxlauncher/ui/: HookEngine.java  LauncherConfiguratorFrame.java
java/src/main/java/com/boxlauncher/ui/: EngineSelector.java  WorkloadProfile.java
js-api/: README.md  backendSelector.js  bridge.cpp  bridge.hpp
